# aoi-dll

./: CMakeLists.txt  README.md  aoi.cpp  aoi.h
aoi/: aoi.cpp  aoi.h  aoi.vcxproj  aoi.vcxproj.filters  dllmain.cpp
